# 3DGrafika

./: mathos logo.blend
zadaca3/: kt_rock_1h.tga  rasterizer.cpp  tgaImage.cpp  tgaImage.h  zad1&2.tga  zad4_a.tga  zad4_b.tga
zadaca_4/: AbstractObjectRenderer.h  Aplication.cpp  Aplication.h  Block.cpp  Block.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  CubeRenderer.cpp  CubeRenderer.h  Light.cpp  Light.h  LightFragmentShader.frag  Model.h  Movement.h  Render.h  Renderer.cpp  Shader.cpp  main.cpp  normalFragmentShader.frag  normalVertexShader.vert
zadaca_4/resources/shaders/: bFragmentShader.fs
